// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<CreateItem/> should add the item correctly if the payload is valid 1`] = `
.c2 {
  font-family: Quicksand;
  font-size: 18px;
  font-weight: 600;
}

.c4 {
  background-color: #FFFFFF;
  box-shadow: 0px 2px 12px rgba(0,0,0,0.04);
  border-top-left-radius: 12px;
  border-bottom-left-radius: 12px;
  height: 100%;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 0px 10px;
}

.c5 {
  color: #34333A;
  font-size: 24px;
}

.c6 {
  background-color: #FFFFFF;
  box-shadow: 0px 2px 12px rgba(0,0,0,0.04);
  border-top-right-radius: 12px;
  border-bottom-right-radius: 12px;
  font-family: Quicksand;
  font-weight: 600;
  height: 100%;
  border: none;
  outline: none;
}

.c6::-webkit-input-placeholder {
  color: #BDBDBD;
}

.c6::-moz-placeholder {
  color: #BDBDBD;
}

.c6:-ms-input-placeholder {
  color: #BDBDBD;
}

.c6::placeholder {
  color: #BDBDBD;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  height: 40px;
  margin-top: 10px;
}

.c7 {
  font-family: Quicksand;
  font-size: 18px;
  color: #000000;
  margin-top: 0px;
  margin-bottom: 15px;
  font-weight: 600;
}

.c8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

.c9 {
  background-color: #FFFFFF;
  border-radius: 12px;
  font-size: 14px;
  font-weight: 600;
  box-shadow: 0px 2px 12px rgba(0,0,0,0.05);
  padding: 8px 20px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  width: 80px;
  margin-bottom: 15px;
  margin-right: 5px;
}

.c10 {
  cursor: pointer;
}

.c11 {
  font-size: 18px;
  color: #c1c1c4;
  cursor: pointer;
}

.c0 {
  padding: 20px;
  box-sizing: border-box;
  min-height: 100%;
  background-color: #fafafe;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: top;
  -webkit-box-align: top;
  -ms-flex-align: top;
  align-items: top;
  -webkit-box-pack: start;
  -webkit-justify-content: start;
  -ms-flex-pack: start;
  justify-content: start;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

.c20 {
  padding: 20px 0px;
  display: block;
  background: transparent;
  text-align: center;
}

.c21 {
  background-color: transparent;
  border-radius: 12px;
  color: #34333A;
  border-color: transparent;
  padding: 20px;
  border-width: 2px;
  border-style: solid;
  font-size: 14px;
  font-family: Quicksand;
  font-weight: bold;
  outline: none;
  cursor: pointer;
}

.c21:disabled {
  color: #BDBDBD   border-color:#BDBDBD;
  cursor: default;
}

.c22 {
  background-color: #F9A109;
  border-color: #F9A109;
  border-radius: 12px;
  color: #FFFFFF;
  padding: 20px;
  border-width: 2px;
  border-style: solid;
  font-size: 14px;
  font-family: Quicksand;
  font-weight: bold;
  outline: none;
  cursor: pointer;
}

.c22:disabled {
  background-color: #BDBDBD;
  border-color: #BDBDBD;
  cursor: default;
}

.c14 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: start;
  -webkit-justify-content: start;
  -ms-flex-pack: start;
  justify-content: start;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  margin-bottom: 25px;
}

.c15 {
  display: block;
  -webkit-order: 2;
  -ms-flex-order: 2;
  order: 2;
  width: 100%;
  box-sizing: border-box;
  padding: 20px 12px;
  border: 2px solid #BDBDBD;
  border-radius: 12px;
  outline: none;
  font-size: 14px;
  font-family: Quicksand;
  font-weight: 500;
  color: #34333A;
}

.c15:focus {
  border-color: #F9A109;
  box-shadow: 0px 0px 1px rgba(0,0,0,0.3);
}

.c15:focus +label {
  color: #F9A109;
}

.c15::-webkit-input-placeholder {
  color: #BDBDBD;
}

.c15::-moz-placeholder {
  color: #BDBDBD;
}

.c15:-ms-input-placeholder {
  color: #BDBDBD;
}

.c15::placeholder {
  color: #BDBDBD;
}

.c17 {
  display: block;
  -webkit-order: 2;
  -ms-flex-order: 2;
  order: 2;
  width: 100%;
  box-sizing: border-box;
  padding: 20px 12px;
  border: 2px solid #BDBDBD;
  border-radius: 12px;
  outline: none;
  font-size: 14px;
  font-family: Quicksand;
  font-weight: 500;
  color: #34333A;
}

.c17:focus {
  border-color: #F9A109;
  box-shadow: 0px 0px 1px rgba(0,0,0,0.3);
}

.c17:focus +label {
  color: #F9A109;
}

.c17::-webkit-input-placeholder {
  color: #BDBDBD;
}

.c17::-moz-placeholder {
  color: #BDBDBD;
}

.c17:-ms-input-placeholder {
  color: #BDBDBD;
}

.c17::placeholder {
  color: #BDBDBD;
}

.c16 {
  display: block;
  width: 100%;
  color: #34333A;
  font-weight: 600;
  margin-bottom: 5px;
  font-size: 14px;
}

.c18 {
  border: 1px solid #E0E0E0;
  box-sizing: border-box;
  padding: 12px;
  list-style: none;
  box-shadow: 0px 2px 12px rgba(0,0,0,0.04);
  border-top-left-radius: 12px;
  border-bottom-left-radius: 12px;
  height: 145px;
  overflow-y: auto;
}

.c18::-webkit-scrollbar {
  width: 5px;
}

.c18::-webkit-scrollbar-track {
  background: #FFFFFF;
  border-top-right-radius: 12px;
  border-bottom-right-radius: 12px;
}

.c18::-webkit-scrollbar-thumb {
  background: #E0E0E0;
  border-radius: 12px;
}

.c18::-webkit-scrollbar-thumb:hover {
  background: #BDBDBD;
}

.c19 {
  font-size: 18px;
  line-height: 22px;
  padding: 10px;
  box-sizing: border-box;
  border-radius: 12px;
  font-weight: 500;
  font-family: Quicksand;
  color: #828282;
  cursor: pointer;
}

.c19:hover,
.c19:active {
  background-color: #f2f2f2;
  color: #000000;
}

.c12 {
  padding: 20px 15px;
  box-sizing: border-box;
  position: relative;
  overflow-y: auto;
}

.c12::-webkit-scrollbar {
  display: none;
}

.c13 {
  font-size: 24px;
  font-weight: 600;
  margin-bottom: 30px;
}

@media (min-width:1200px) {
  .c2 {
    font-size: 24px;
  }
}

@media (min-width:1200px) {
  .c3 {
    font-size: 24px;
    margin-left: 20px;
    margin-top: 0px;
  }
}

@media (min-width:1200px) {
  .c9 {
    width: 120px;
    margin-right: 15px;
    margin-bottom: 30px;
    font-size: 18px;
  }
}

@media (min-width:768px) {
  .c0 {
    padding: 20px 60px;
  }
}

@media (min-width:768px) {
  .c1 {
    -webkit-flex-wrap: nowrap;
    -ms-flex-wrap: nowrap;
    flex-wrap: nowrap;
    -webkit-box-pack: space-around;
    -webkit-justify-content: space-around;
    -ms-flex-pack: space-around;
    justify-content: space-around;
  }
}

@media (min-width:768px) {
  .c20 {
    position: fixed;
    bottom: 0;
    right: 0;
    background: #fefefe;
    width: 250px;
  }
}

@media (min-width:1200px) {
  .c20 {
    width: 370px;
  }
}

@media (min-width:768px) {
  .c18 {
    margin-bottom: 100px;
  }
}

@media (min-width:768px) {
  .c12 {
    height: 100%;
  }
}

<div>
  <div
    class="c0"
  >
    <div
      class="c1"
    >
      <h1
        class="c2"
      >
        <span
          style="color: rgb(249, 161, 9); font-weight: bold;"
        >
          Shoppingify
           
        </span>
        allows you take your shopping list wherever you go
      </h1>
      <div
        class="c3"
      >
        <div
          class="c4"
        >
          <div
            class="c5 material-icons-round"
          >
            search
          </div>
        </div>
        <input
          class="c6"
          placeholder="Search item"
        />
      </div>
    </div>
    <div
      style="margin-top: 50px;"
    >
      <h3
        class="c7"
      >
        Fruit
      </h3>
      <div
        class="c8"
      >
        <div
          class="c9"
        >
          <span
            class="c10"
          >
            Apple
          </span>
          <i
            class="c11 material-icons-round"
          >
            add
          </i>
        </div>
        <div
          class="c9"
        >
          <span
            class="c10"
          >
            Banana
          </span>
          <i
            class="c11 material-icons-round"
          >
            add
          </i>
        </div>
      </div>
    </div>
  </div>
  <div
    class="c12"
  >
    <form
      action="#"
      method="post"
    >
      <h3
        class="c13"
      >
        Add a new item
      </h3>
      <div
        class="c14"
      >
        <input
          class="c15"
          id="name"
          name="name"
          placeholder="Enter a name"
          value="Banana"
        />
        <label
          class="c16"
          for="name"
        >
          Name
        </label>
      </div>
      <div
        class="c14"
      >
        <textarea
          class="c17"
          id="note"
          name="note"
          placeholder="Enter a note"
          rows="3"
        >
          The Best Banana
        </textarea>
        <label
          class="c16"
          for="note"
        >
          Note(optional)
        </label>
      </div>
      <div
        class="c14"
      >
        <input
          class="c15"
          id="image"
          name="image"
          placeholder="Enter a url"
          value="https://i.imgur.com/9o7jc9o.jpeg"
        />
        <label
          class="c16"
          for="image"
        >
          Image(optional)
        </label>
      </div>
      <div
        class="c14"
      >
        <input
          class="c15"
          id="category"
          placeholder="Enter a Category"
          value="Fruit"
        />
        <label
          class="c16"
          for="category"
        >
          Category
        </label>
      </div>
      <ul
        class="c18"
        style="visibility: hidden;"
      >
        <li
          class="c19"
        >
          Fruit
        </li>
      </ul>
      <div
        class="c20"
      >
        <button
          class="c21"
          type="button"
        >
          cancel
        </button>
        <button
          class="c22"
          type="submit"
        >
          Save
        </button>
      </div>
    </form>
  </div>
</div>
`;

exports[`<CreateItem/> should render correctly 1`] = `
.c7 {
  padding: 20px 0px;
  display: block;
  background: transparent;
  text-align: center;
}

.c8 {
  background-color: transparent;
  border-radius: 12px;
  color: #34333A;
  border-color: transparent;
  padding: 20px;
  border-width: 2px;
  border-style: solid;
  font-size: 14px;
  font-family: Quicksand;
  font-weight: bold;
  outline: none;
  cursor: pointer;
}

.c8:disabled {
  color: #BDBDBD   border-color:#BDBDBD;
  cursor: default;
}

.c9 {
  background-color: #F9A109;
  border-color: #F9A109;
  border-radius: 12px;
  color: #FFFFFF;
  padding: 20px;
  border-width: 2px;
  border-style: solid;
  font-size: 14px;
  font-family: Quicksand;
  font-weight: bold;
  outline: none;
  cursor: pointer;
}

.c9:disabled {
  background-color: #BDBDBD;
  border-color: #BDBDBD;
  cursor: default;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: start;
  -webkit-justify-content: start;
  -ms-flex-pack: start;
  justify-content: start;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  margin-bottom: 25px;
}

.c3 {
  display: block;
  -webkit-order: 2;
  -ms-flex-order: 2;
  order: 2;
  width: 100%;
  box-sizing: border-box;
  padding: 20px 12px;
  border: 2px solid #BDBDBD;
  border-radius: 12px;
  outline: none;
  font-size: 14px;
  font-family: Quicksand;
  font-weight: 500;
  color: #34333A;
}

.c3:focus {
  border-color: #F9A109;
  box-shadow: 0px 0px 1px rgba(0,0,0,0.3);
}

.c3:focus +label {
  color: #F9A109;
}

.c3::-webkit-input-placeholder {
  color: #BDBDBD;
}

.c3::-moz-placeholder {
  color: #BDBDBD;
}

.c3:-ms-input-placeholder {
  color: #BDBDBD;
}

.c3::placeholder {
  color: #BDBDBD;
}

.c5 {
  display: block;
  -webkit-order: 2;
  -ms-flex-order: 2;
  order: 2;
  width: 100%;
  box-sizing: border-box;
  padding: 20px 12px;
  border: 2px solid #BDBDBD;
  border-radius: 12px;
  outline: none;
  font-size: 14px;
  font-family: Quicksand;
  font-weight: 500;
  color: #34333A;
}

.c5:focus {
  border-color: #F9A109;
  box-shadow: 0px 0px 1px rgba(0,0,0,0.3);
}

.c5:focus +label {
  color: #F9A109;
}

.c5::-webkit-input-placeholder {
  color: #BDBDBD;
}

.c5::-moz-placeholder {
  color: #BDBDBD;
}

.c5:-ms-input-placeholder {
  color: #BDBDBD;
}

.c5::placeholder {
  color: #BDBDBD;
}

.c4 {
  display: block;
  width: 100%;
  color: #34333A;
  font-weight: 600;
  margin-bottom: 5px;
  font-size: 14px;
}

.c6 {
  border: 1px solid #E0E0E0;
  box-sizing: border-box;
  padding: 12px;
  list-style: none;
  box-shadow: 0px 2px 12px rgba(0,0,0,0.04);
  border-top-left-radius: 12px;
  border-bottom-left-radius: 12px;
  height: 145px;
  overflow-y: auto;
}

.c6::-webkit-scrollbar {
  width: 5px;
}

.c6::-webkit-scrollbar-track {
  background: #FFFFFF;
  border-top-right-radius: 12px;
  border-bottom-right-radius: 12px;
}

.c6::-webkit-scrollbar-thumb {
  background: #E0E0E0;
  border-radius: 12px;
}

.c6::-webkit-scrollbar-thumb:hover {
  background: #BDBDBD;
}

.c0 {
  padding: 20px 15px;
  box-sizing: border-box;
  position: relative;
  overflow-y: auto;
}

.c0::-webkit-scrollbar {
  display: none;
}

.c1 {
  font-size: 24px;
  font-weight: 600;
  margin-bottom: 30px;
}

@media (min-width:768px) {
  .c7 {
    position: fixed;
    bottom: 0;
    right: 0;
    background: #fefefe;
    width: 250px;
  }
}

@media (min-width:1200px) {
  .c7 {
    width: 370px;
  }
}

@media (min-width:768px) {
  .c6 {
    margin-bottom: 100px;
  }
}

@media (min-width:768px) {
  .c0 {
    height: 100%;
  }
}

<div>
  <div
    class="c0"
  >
    <form
      action="#"
      method="post"
    >
      <h3
        class="c1"
      >
        Add a new item
      </h3>
      <div
        class="c2"
      >
        <input
          class="c3"
          id="name"
          name="name"
          placeholder="Enter a name"
          value=""
        />
        <label
          class="c4"
          for="name"
        >
          Name
        </label>
      </div>
      <div
        class="c2"
      >
        <textarea
          class="c5"
          id="note"
          name="note"
          placeholder="Enter a note"
          rows="3"
        />
        <label
          class="c4"
          for="note"
        >
          Note(optional)
        </label>
      </div>
      <div
        class="c2"
      >
        <input
          class="c3"
          id="image"
          name="image"
          placeholder="Enter a url"
          value=""
        />
        <label
          class="c4"
          for="image"
        >
          Image(optional)
        </label>
      </div>
      <div
        class="c2"
      >
        <input
          class="c3"
          id="category"
          placeholder="Enter a Category"
          value=""
        />
        <label
          class="c4"
          for="category"
        >
          Category
        </label>
      </div>
      <ul
        class="c6"
        style="visibility: hidden;"
      />
      <div
        class="c7"
      >
        <button
          class="c8"
          type="button"
        >
          cancel
        </button>
        <button
          class="c9"
          type="submit"
        >
          Save
        </button>
      </div>
    </form>
  </div>
</div>
`;
